[package]
name = "interception"
description = "Safe wrapper for Interception"
version = "0.1.0"
authors = ["Joe Kaushal <joe.kaushal@gmail.com>"]
edition = "2018"
repository = "https://github.com/bozbez/interception-rs"
license = "MIT OR Apache-2.0"

[dependencies]
interception-sys = "0.1.3"
bitflags = "1.2.1"
num_enum = "0.5.0"
